--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         <article id="portfolio">
           <h2>Portfolio</h2>
           
-          <div class="myFlex">
+          <div class="grid-container">
           <section>
             <h3>Abstract Red</h3>
             <div>
-              <img src="images/abstract-red.png" alt="Abstract Red" />
+              <img src="images/abstract-red.png" alt="Abstract Red" class="portfolio"/>
             </div>
-            <p class="portfolio">
+            <p class="grid-item">
               Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
               waistcoat scenester hell of.
             </p>
@@ -89,9 +89,9 @@
           <section>
             <h3>Spiral Zany</h3>
             <div>
-              <img src="images/spiral-zany.png" alt="Spiral Zany" />
+              <img src="images/spiral-zany.png" alt="Spiral Zany" class="portfolio"/>
             </div>
-            <p class="portfolio">
+            <p class="grid-item">
               Sriracha portland taxidermy cronut messenger bag, vegan
               distillery. Vaporware kickstarter air plant mumblecore food truck.
             </p>
@@ -100,9 +100,9 @@
           <section>
             <h3>Melted Rainbow</h3>
             <div>
-              <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
+              <img src="images/melted-rainbow.png" alt="Melted Rainbow" class="portfolio"/>
             </div>
-            <p class="portfolio">
+            <p class="grid-item">
               Edison bulb single-origin coffee snackwave, actually ennui
               locavore shabby chic forage.
             </p>
